Revision history for Perl extension Metabrik.

1.08
   - UPDATE: shell::command: now use IPC::Run3 to capture shell commands output
   - update: shell::command: system Command now returns $? on success
   - update: Metabrik: display every missing items from brik_require_*_check() before erroring
   - update: new dependance on IPC::Run3

1.07 Sun Mar  8 17:52:37 CET 2015
   - bugfix: shell::history: correctly writes $* variables when calling history Commands
   - new: shell::rc: create an alias to make it easy to switch to root from Shell
   - new: brik::search and perl::module Briks integrated in main distribution
   - remove: no more metabrik-cpanm, enforce use of standard cpanm

1.06 Fri Feb 27 07:17:59 CET 2015
   - bugfix: shell::command: go trough PATH to find a cmd to run (like less PAGER)
   - bugfix: core::shell: on SIGINT handling, now allows to break multiline and run Commands
   - bugfix: core::shell: allow user to get out of multiline mode by hitting Ctrl+C
   - bugfix: core::shell: better management of Metabrik Commands in multiline mode
   => you can put Metabrik Commands within single quotes anywhere
   - update: shell::script: load Command can take an optional file parameter
   - update: metabrik, shell::rc/script, core::shell: easier handling of rc file loading
   - new: metabrik: --script-rc argument to load a specific rc file for scripts

1.05 Tue Feb 10 08:01:53 CET 2015
   - FEATURE: core::shell: multiline mode do not require lines to end with `\' anymore
   - FEATURE: core::shell: Metabrik commands are directly translated to Perl code
              => Note: no alias support for now, only set, get, run and use are handled
   - bugfix: shell::command: check for error code from `` call
   - bugfix: Metabrik: do not override default Attributes with brik_use_properties
             if already set by brik_properties
   - bugfix: Metabrik: correctly prints help Command details when overriden by subclass