@@ -1,6 +1,7 @@
 Revision history for Perl extension Metabrik.
 
 1.08
+   - FEATURE: core::shell: run executable commands found in PATH through system Command
    - UPDATE: shell::command: now use IPC::Run3 to capture shell commands output
    - update: shell::command: system Command now returns $? on success
    - update: Metabrik: display every missing items from brik_require_*_check() before erroring
